Tidy up scripts, still more to remove

--- a/table/GT-xtab-prop-99.tex
+++ b/table/GT-xtab-prop-99.tex
@@ -1,7 +1,9 @@
 % latex table generated in R 4.2.0 by xtable 1.8-4 package
-% Tue Aug  2 16:16:30 2022
+% Wed Aug  3 14:56:58 2022
 \begin{table}[ht]
 \centering
+\caption{Frequencies of HMC and ADVI significance calls at 99\% threshold for BaseQTL with known genotypes.} 
+\label{tab:gt-xtab-prop-99}
 \begin{tabular}{rr|rr}
    &  & ADVI &  \\ 
     &   & Null & Significant \\ 
@@ -9,6 +11,4 @@
 HMC & Null & 0.986 & 0.011 \\ 
     & Significant & 0 & 0.003 \\ 
   \end{tabular}
-\caption{Cross-tabulation of proportion of HMC and ADVI significance calls at 99\% threshold for BaseQTL with known genotypes.} 
-\label{tab:gt-xtab-prop-99}
 \end{table}
