--- a/table/noGT-xtab-prop-99.tex
+++ b/table/noGT-xtab-prop-99.tex
@@ -1,7 +1,9 @@
 % latex table generated in R 4.2.0 by xtable 1.8-4 package
-% Tue Aug  2 15:48:02 2022
+% Tue Aug 16 00:37:34 2022
 \begin{table}[ht]
 \centering
+\caption{Frequencies of HMC and ADVI significance calls at 99\% threshold for BaseQTL with unknown genotypes.} 
+\label{tab:nogt-xtab-prop-99}
 \begin{tabular}{rr|rr}
    &  & ADVI &  \\ 
     &   & Null & Significant \\ 
@@ -9,6 +11,4 @@
 HMC & Null & 0.89 & 0.019 \\ 
     & Significant & 0.006 & 0.085 \\ 
   \end{tabular}
-\caption{Cross-tabulation of proportion of HMC and ADVI significance calls at 99\% threshold for BaseQTL with unknown genotypes.} 
-\label{tab:nogt-xtab-prop-99}
 \end{table}
