Pathfinder, meanfield, refactor assocs to gene-level, variability

--- a/table/GT-xtab-99.tex
+++ b/table/GT-xtab-99.tex
@@ -1,14 +1,14 @@
 % latex table generated in R 4.2.0 by xtable 1.8-4 package
-% Wed Aug  3 14:56:58 2022
+% Tue Oct 11 15:09:52 2022
 \begin{table}[ht]
 \centering
 \caption{Confusion matrix of HMC and ADVI significance calls at 99\% threshold for BaseQTL with known genotypes} 
-\label{tab:gt-xtab-99}
+\label{tab:GT-xtab-99}
 \begin{tabular}{rr|rr}
    &  & ADVI &  \\ 
     &   & Null & Significant \\ 
    \hline
-HMC & Null & 49154 & 546 \\ 
-    & Significant & 3 & 165 \\ 
+HMC & Null & 49156 & 540 \\ 
+    & Significant & 4 & 164 \\ 
   \end{tabular}
 \end{table}
