--- a/table/GT-xtab-prop-99-pf.tex
+++ b/table/GT-xtab-prop-99-pf.tex
@@ -1,14 +1,14 @@
 % latex table generated in R 4.2.0 by xtable 1.8-4 package
-% Tue Oct 11 15:09:52 2022
+% Tue Oct 11 15:09:56 2022
 \begin{table}[ht]
 \centering
-\caption{Frequencies of HMC and ADVI significance calls at 99\% threshold for BaseQTL with known genotypes} 
-\label{tab:GT-xtab-prop-99}
+\caption{Frequencies of HMC and Pathfinder significance calls at 99\% threshold for BaseQTL with known genotypes} 
+\label{tab:GT-xtab-prop-99-pf}
 \begin{tabular}{rr|rr}
    &  & ADVI &  \\ 
     &   & Null & Significant \\ 
    \hline
-HMC & Null & 0.986 & 0.011 \\ 
+HMC & Null & 0.983 & 0.014 \\ 
     & Significant & 0 & 0.003 \\ 
   \end{tabular}
 \end{table}
