--- a/table/noGT-xtab-prop-99.tex
+++ b/table/noGT-xtab-prop-99.tex
@@ -1,9 +1,9 @@
 % latex table generated in R 4.2.0 by xtable 1.8-4 package
-% Tue Aug 16 00:37:34 2022
+% Wed Sep 14 10:36:30 2022
 \begin{table}[ht]
 \centering
-\caption{Frequencies of HMC and ADVI significance calls at 99\% threshold for BaseQTL with unknown genotypes.} 
-\label{tab:nogt-xtab-prop-99}
+\caption{Frequencies of HMC and ADVI significance calls at 99\% threshold for BaseQTL with unknown genotypes} 
+\label{tab:noGT-xtab-prop-99}
 \begin{tabular}{rr|rr}
    &  & ADVI &  \\ 
     &   & Null & Significant \\ 
