--- a/table/noGT-xtab-99.tex
+++ b/table/noGT-xtab-99.tex
@@ -1,14 +1,14 @@
 % latex table generated in R 4.2.0 by xtable 1.8-4 package
-% Wed Sep 14 10:36:30 2022
+% Wed Nov  9 21:49:19 2022
 \begin{table}[ht]
 \centering
-\caption{Confusion matrix of HMC and ADVI significance calls at 99\% threshold for BaseQTL with unknown genotypes} 
+\caption{Confusion matrix of HMC and ADVI significance calls at 99\% threshold for BaseQTL with uncertain genotypes} 
 \label{tab:noGT-xtab-99}
 \begin{tabular}{rr|rr}
    &  & ADVI &  \\ 
     &   & Null & Significant \\ 
    \hline
-HMC & Null & 8756 & 187 \\ 
-    & Significant & 60 & 832 \\ 
+HMC & Null & 3764 & 4383 \\ 
+    & Significant & 224 & 509 \\ 
   \end{tabular}
 \end{table}
