--- a/table/noGT-xtab-prop-99.tex
+++ b/table/noGT-xtab-prop-99.tex
@@ -1,14 +1,14 @@
 % latex table generated in R 4.2.0 by xtable 1.8-4 package
-% Wed Sep 14 10:36:30 2022
+% Wed Nov  9 21:49:19 2022
 \begin{table}[ht]
 \centering
-\caption{Frequencies of HMC and ADVI significance calls at 99\% threshold for BaseQTL with unknown genotypes} 
+\caption{Frequencies of HMC and ADVI significance calls at 99\% threshold for BaseQTL with uncertain genotypes} 
 \label{tab:noGT-xtab-prop-99}
 \begin{tabular}{rr|rr}
    &  & ADVI &  \\ 
     &   & Null & Significant \\ 
    \hline
-HMC & Null & 0.89 & 0.019 \\ 
-    & Significant & 0.006 & 0.085 \\ 
+HMC & Null & 0.424 & 0.494 \\ 
+    & Significant & 0.025 & 0.057 \\ 
   \end{tabular}
 \end{table}
