Dont filter refbias

--- a/table/noGT-xtab-99.tex
+++ b/table/noGT-xtab-99.tex
@@ -1,14 +1,14 @@
 % latex table generated in R 4.2.0 by xtable 1.8-4 package
-% Sat Dec 10 01:34:38 2022
+% Mon Jan  9 11:12:19 2023
 \begin{table}[ht]
 \centering
-\caption{Confusion matrix of HMC and ADVI significance calls at 99\% threshold for BaseQTL with uncertain genotypes} 
+\caption{Confusion matrix of HMC and ADVI significance calls at 99\% threshold for BaseQTL with unknown genotypes} 
 \label{tab:noGT-xtab-99}
 \begin{tabular}{rr|rr}
    &  & ADVI &  \\ 
     &   & Null & Significant \\ 
    \hline
-HMC & Null & 7686 & 168 \\ 
-    & Significant & 58 & 814 \\ 
+HMC & Null & 8510 & 149 \\ 
+    & Significant & 61 & 826 \\ 
   \end{tabular}
 \end{table}
