--- a/table/noGT-xtab-prop-99.tex
+++ b/table/noGT-xtab-prop-99.tex
@@ -1,14 +1,14 @@
 % latex table generated in R 4.2.0 by xtable 1.8-4 package
-% Sat Dec 10 01:34:38 2022
+% Mon Jan  9 11:12:19 2023
 \begin{table}[ht]
 \centering
-\caption{Frequencies of HMC and ADVI significance calls at 99\% threshold for BaseQTL with uncertain genotypes} 
+\caption{Frequencies of HMC and ADVI significance calls at 99\% thresholdfor BaseQTLwith unknown genotypes} 
 \label{tab:noGT-xtab-prop-99}
 \begin{tabular}{rr|rr}
    &  & ADVI &  \\ 
     &   & Null & Significant \\ 
    \hline
-HMC & Null & 0.881 & 0.019 \\ 
-    & Significant & 0.007 & 0.093 \\ 
+HMC & Null & 0.891 & 0.016 \\ 
+    & Significant & 0.006 & 0.087 \\ 
   \end{tabular}
 \end{table}
